implement password generator and dark mode